[project]
name = "agentic-ai"
version = "0.1.0"
description = "LangGraph chat client that connects to MCP servers"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "langchain",
    "langchain-mcp-adapters",
    "langchain-openai",
    "langgraph",
    "mcp",
    "openai",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["graph", "gui", "main"]